--- a/austinizer.css
+++ b/austinizer.css
@@ -1,7 +1,7 @@
-/* alanbbos.css */
+/* austinizer.css */
 
 body {
-   background: #909193 url(images/linen.png) repeat;
+   background: #909193 url(images/austinizerbackground.png) repeat;
    font-family: Helvetica, Verdana, Arial, sans-serif;
 	font-size: 12pt;
 	font-weight: normal;
