--- a/austinizer.css
+++ b/austinizer.css
@@ -46,3 +46,21 @@ h3 {
 	font-size: 8pt;
    text-align: center;
 }
+#storageDisplay {
+    background: none repeat scroll 0 0 #787878;
+    border: 2px groove #000000;
+    height: 340px;
+    margin-bottom: 5px;
+    overflow: auto;
+    width: 355px;
+}
+#storageTable {
+    height: 340px;
+    width: 355px;
+}
+#MemoryDisplay {
+    background: none repeat scroll 0 0 #FFFFFF;
+    height: 228px;
+    overflow: scroll;
+    width: 400px;
+}
