Visual file system update
Added a visual for the file system as well as added a few global
variable to enhance readability. Added a function that will format as
well. Next step is to add crud elements

--- a/austinizer.css
+++ b/austinizer.css
@@ -64,3 +64,10 @@ h3 {
     overflow: scroll;
     width: 400px;
 }
+#fileDisplay{
+    background: none repeat scroll 0 0 #FFFFFF;
+    height: 228px;
+    overflow: scroll;
+    white-space:nowrap;
+    width: 400px;
+}
